Fixes for Windows build of fltk1.4 version of mrViewer.
Former-commit-id: 4821c46e0aa4170470523053fe7deda967c0028e [formerly 6a011065dd22f9889d8d5dbf7dc65a72b7f9e44b [formerly e6ec234dd97e3b0e45fd7ec28ed7bb7519f203e1]]
Former-commit-id: 939d3b47ef2c665a290f7c95236db0cff1102308 [formerly 08a9a80abe685a53ccb206d341a01c0edb72db7a] [formerly 2e65e2646836562a3f7f3933d4cafbfe419bc489 [formerly b686fbfe03d65ed0e997704742cbd7a234e22d55]] [formerly a7185033e9edf2943a7d5c2c46767bba1b697196 [formerly e534785590dd86a273ca753dfa42dbd8605cd30e] [formerly dee093cae12a034686361a38d450443fc9ca5616 [formerly 35ac54b4b5c1bdd70089d3cb7ae2ddc4241b4819]]]
Former-commit-id: 89978f193077ab483f166f03d7a39066fcf65a89 [formerly 28bd34e0aeff6b986b897e692cb94b496ceb7d1e] [formerly b943e4233736f01dd6c5ab2291f99defa69d68b8 [formerly 50183b46df25905cb92e023323036a1a7f783b87]]
Former-commit-id: b763ece87b9d356ea3a7183ec6f12d2fa3c5fbd4 [formerly 3220dbab6177f06a045711babeba60ea123893ea]
Former-commit-id: 9d35851d816faa17b8b2921a0d4e0a5f90ffd254

--- a/mrViewer/src/CMakeLists.txt
+++ b/mrViewer/src/CMakeLists.txt
@@ -37,13 +37,13 @@ FIND_PACKAGE( LibRaw      REQUIRED )    # for libraw files
 FIND_PACKAGE( SampleICC   REQUIRED )    # for ICC loading/processing
 FIND_PACKAGE( TinyXML2    REQUIRED )
 
-ADD_DEFINITIONS( -DMAGICKCORE_QUANTUM_DEPTH=32 -DMAGICKCORE_HDRI_ENABLE=1 -DUSE_GETTEXT -DMR_SSE -D__STDC_CONSTANT_MACROS -D_CRT_SECURE_NO_WARNINGS  )
+ADD_DEFINITIONS( -DMAGICKCORE_QUANTUM_DEPTH=32 -DMAGICKCORE_HDRI_ENABLE=1 -DUSE_GETTEXT -DMR_SSE -D_CRT_SECURE_NO_WARNINGS  )
 
 
 IF(WIN32 OR WIN64 OR CYGWIN OR MINGW)
   #  ADD_DEFINITIONS( -DFREEGLUT_STATIC -DFREEGLUT_LIB_PRAGMAS -DWIN32 -D_WIN32_WINNT=0x0501 )
   ADD_COMPILE_OPTIONS( -W1 )
-     ADD_DEFINITIONS( -DFREEGLUT_STATIC -DWIN32 -D_WIN32_WINNT=0x0501 -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS )
+     ADD_DEFINITIONS( -DFREEGLUT_STATIC -DWIN32 -D_WIN32_WINNT=0x0501 )
   SET(OS_LIBRARIES
     Winmm ws2_32 Psapi ${GLEW_LIBRARIES}
     )
@@ -239,6 +239,7 @@ SET( SOURCES
  gui/FLU/Flu_Return_Button.cpp
  gui/FLU/Flu_Label.cpp
  gui/FLU/flu_filename_list.cxx
+ gui/FLU/flu_scandir.c
  gui/FLU/flu_numericsort.c
  gui/FLU/flu_file_chooser_pixmaps.cpp
  gui/FLU/Flu_Wrap_Group.cpp
@@ -306,7 +307,7 @@ SET( SOURCES
 
 IF(WIN32 OR WIN64 OR CYGWIN OR MINGW)
   SET( SOURCES audio/mrvWaveEngine.cpp ${SOURCES} )
-  SET( SOURCES gui/resource.rc ${SOURCES} )
+  # SET( SOURCES gui/resource.rc ${SOURCES} )
 ELSE( WIN32 OR WIN64 OR CYGWIN OR MINGW )
   SET( SOURCES audio/mrvALSAEngine.cpp ${SOURCES} )
 ENDIF(WIN32 OR WIN64 OR CYGWIN OR MINGW)
