Added mrv::Tree to handle images of closing and opening tree.
Former-commit-id: 2018c2fd31410a82a3f3eb9769b98e5ca6d5891e [formerly db8ae536a5b0e80d3c95753a1a2774e9b63da87c]
Former-commit-id: 15f4ebb9bb530248fc84def7af4fd07fbe80c172 [formerly 2574cc5ced185cad20183300d21a88dcc25fa456] [formerly d5a01712d82215a845572b5b6c75fbebcb4fc60f [formerly 547e4b8e359186afd19199d429607d61201cb6f6]]
Former-commit-id: 6ea694853f688d6212f898ab7f9acf59fb5926af
Former-commit-id: 7950f94bd5a93531cb76e2beab556010ee8e0d3a

--- a/mrViewer/src/CMakeLists.txt
+++ b/mrViewer/src/CMakeLists.txt
@@ -259,7 +259,6 @@ SET( SOURCES
   gui/mrvCollapsibleGroup.cpp
   gui/mrvColorInfo.cpp
   gui/mrvChoice.cpp
-  # gui/mrvDatabaseBrowser.cpp
   gui/mrvEDLGroup.cpp
   gui/mrvElement.cpp
   gui/mrvFileRequester.cpp
@@ -284,6 +283,7 @@ SET( SOURCES
   gui/mrvTextDisplay.cpp
   gui/mrvTimecode.cpp
   gui/mrvTimeline.cpp
+  gui/mrvTree.cpp
   gui/mrvVectorscope.cpp
   gui/mrvVersion.cpp
   gui/mrvWaveform.cpp
