Made color info copy the values of the display. Reversed open/closed icons in mrv::PreferencesTree.
Former-commit-id: a9909004412caabaed95b714afeb8378295e8a9c [formerly 6b7ccfb26e7fae6bc3b2fccc55689545df823e6c]
Former-commit-id: 1592722483abc0e0e4815b17b83eda2f5c8a052b [formerly 8caf8a2edc3e318ff13fb937cf4641d6a1c73ef4] [formerly d3ab058d28449ab018f4dc25be2dee6f7a428069] [formerly d3ab058d28449ab018f4dc25be2dee6f7a428069 [formerly 8fed66cb7d99e11db882c6a7be1becd1b36b5c89]] [formerly f13063589d0d9f3cd2cdf343bed97fc8fdfab64e [formerly 50a8a33392fb2da18f19a0a43ab4a14ec6a55ae0] [formerly 536d2e85d3d47cdeb2cf8d728fe61a959a8d0bda [formerly af28da18d10691ec996b6380f955836fad2c1353]] [formerly 70f2a32cc1e8d0df937d25e462a61b0e7b38674f [formerly 536d2e85d3d47cdeb2cf8d728fe61a959a8d0bda [formerly af28da18d10691ec996b6380f955836fad2c1353] [formerly 48defe0e796e29ec0ff3f9e871bfc5745f34991c [formerly 5a0c6c80210ff392170ebe0a2148bfc8c2131bda]]]]]
Former-commit-id: 164a38ed03ad299c09f7550de09127197f531aa0 [formerly 1e59616d3969dcccd8118a0e10a079e4eac2d4d8] [formerly 67a308005fa8977eed30ab095e824d21417f0ccb] [formerly 67a308005fa8977eed30ab095e824d21417f0ccb [formerly 4540b54b1ac5d76faf0721145de5ad96a48595df]]
Former-commit-id: 740f5e1f2e96db656a68d99e607a58dacecc973a [formerly 3553df82880f72d58431f4df7fe43ce4431a772b]
Former-commit-id: 740f5e1f2e96db656a68d99e607a58dacecc973a
Former-commit-id: a8350b8e88341322de8260db4f223720def157cd
Former-commit-id: 068bd16a29c287ea105e6553bd98096fa71e9412

--- a/mrViewer/src/CMakeLists.txt
+++ b/mrViewer/src/CMakeLists.txt
@@ -103,7 +103,7 @@ ELSE(WIN32 OR WIN64 OR CYGWIN OR MINGW)
        #ADD_DEFINITIONS( -fsanitize=thread -DTHREAD_SANITIZER )
        #SET(OS_LIBRARIES tsan ${OS_LIBRARIES} )
        ADD_COMPILE_OPTIONS( -fsanitize=address )
-       SET(OS_LIBRARIES asan ${OS_LIBRARIES} )
+       SET(LIBRARIES asan ${LIBRARIES} )
      ENDIF( CMAKE_BUILD_TYPE STREQUAL "Debug" )
 
   ENDIF(APPLE)
@@ -143,14 +143,15 @@ INCLUDE_DIRECTORIES(
 FLTK_WRAP_UI( mrViewer
   gui/aviSave.fl
   gui/AboutUI.fl
-  gui/EXROptionsUI.fl
+  gui/mrvAudioOffset.fl
   gui/mrvGl3dView.fl
+  gui/EXROptionsUI.fl
   gui/OIIOOptionsUI.fl
   gui/mrvEDLWindowUI.fl
   gui/mrvIccProfileUI.fl
   gui/mrvColorAreaUI.fl
+  gui/mrvHotkeyUI.fl
   gui/keyboard_ui.fl
-  gui/mrvAudioOffset.fl
   gui/mrvImageInfo.fl
   gui/mrvReelUI.fl
   gui/mrvSOPNode.fl
@@ -361,6 +362,7 @@ ENDIF(NOT WIN32)
 
 
 SET( LIBRARIES
+  ${LIBRARIES}
   ${LIBINTL_LIBRARIES}
   ${FFMPEG_LIBRARIES}
   ${GLUT_LIBRARIES}
